Fix alignements and card styling to look more like Zeplin

--- a/src/client/containers/Marketview/sections/main/FormatCard/style.scss
+++ b/src/client/containers/Marketview/sections/main/FormatCard/style.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 32px;
+  // margin-top: 47px;
   margin-bottom: 30px;
 
   .formatItem {
@@ -46,7 +47,8 @@
       }
     }
     .formatItemText {
-      margin-top: 20px;
+      // margin-top: 20px;
+      margin-top: 16px;
       height: 80px;
       display: flex;
       flex-direction: column;
